# aruyO

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: create_geospatial.py  db.py  main.py  sample.py  seed.py
backend/src/cruds/: auth.py  cruds_auth.py  cruds_exhibits.py  cruds_items.py  cruds_reserves.py  cruds_search.py  cruds_usersInfo.py  cruds_users_info.py  reserves.py  search.py  users_info.py
backend/src/routers/: auth.py  items.py  reserves.py  routers_auth.py  routers_exhibits.py  routers_items.py  routers_reserves.py  routers_search.py  routers_userInfo.py  routers_user_info.py  search.py  stripe.py  user_info.py
backend/src/schemas/: auth.py  reserve.py  schemas_auth.py
backend/src/utils/auth/: auth.py
backend/src/utils/logger/: logger.py
backend/src/utils/redis/: redis.py
backend/src/utils/serializer/: serializer.py
backend/tests/: search_results.py  test_sample.py
backend/tests/cruds/: results.py  test_auth.py  test_reserves.py  test_search.py
backend/tests/router/: test_search.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/pages/: index.tsx  sample.tsx
frontend/src/: middleware.ts
frontend/src/context/: auth.tsx
frontend/src/lib/: atom.ts  axiosInstance.ts  class-names.ts
frontend/src/pages/: _app.tsx  index.tsx  mypage.tsx  sample_qr.tsx  signin.tsx  signup.tsx  specialThanks.tsx
frontend/src/styles/: globals.css
frontend/src/types/: item.ts  order.ts  user.ts
frontend/src/utils/: getNumberOfDays.ts  (+2 more)
(+47 files in other folders)
