[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pytest = "^7.2.1"
pymongo = "^4.3.3"
redis = "^4.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uuid = "^1.30"
deepdiff = "^6.2.3"
stripe = "^5.0.0"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
